--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ink textil</string>
+
+    <!-- Agrega aquí tu client_id desde google-services.json -->
+    <string name="default_web_client_id">675854312954-pc4k5532a8m5ar5bvcvc1arklbdod7ij.apps.googleusercontent.com</string>
 </resources>
